--- a/src/home.css
+++ b/src/home.css
@@ -152,3 +152,47 @@ nav > .nav-list {
         margin: 5px auto;
     }
 }
+/* Section to style services offered*/
+.services {
+    background-image: url(./assets/images/restaurant-back.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 25rem;
+    padding: var(--space-medium);
+}
+.services h2 {
+    color: hsl(51, 100%, 50%);
+    font-size: var(--font-size-xxh);
+    font-family: var(--body-font-family);
+    text-align: center;
+    margin-bottom: 5%;
+}    
+.services .service-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: var(--space-small);
+    padding: var(--space-small);
+}
+.services .service-list > .service-item {
+    margin: 0 10px 5px;
+    padding: var(--space-smallest);
+    border: 2px solid hsla(0, 0%, 100%, 0.548);
+    background-color: hsla(0, 0%, 100%, 0.8);
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
+    font-size: var(--base-font-size);
+    font-family: var(--body-font-family);
+    text-align: center;
+    transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;
+}
+.service-list > .service-item:hover {
+    background-color: hsl(43, 100%, 50%);
+    border: 2px solid hsl(0, 0%, 100%);
+    box-shadow: 0 4px 6px hsla(0, 0%, 100%, 0.2); 
+    color: hsl(0, 0%, 0%); 
+    transform: scale(0.97) rotate(1deg);
+    cursor: pointer;  
+}
