--- a/src/home.css
+++ b/src/home.css
@@ -9,7 +9,7 @@
 :root {
     /* Color*/
     --header-bg-crl: hsla(0, 98%, 50%, 0.945);
-    --footer-bg-crl: hsla(0, 0%, 0%, 0.781);
+    --footer-bg-crl: hsla(0, 0%, 0%, 0.911);
     --secondary-crl: hsla(0, 0%, 100%, 0.692);
     --button-bg-crl: hsla(0, 98%, 50%, 0.945);
     --button-txt-crl: hsl(0, 0%, 100%);
@@ -195,4 +195,66 @@ nav > .nav-list {
     color: hsl(0, 0%, 0%); 
     transform: scale(0.97) rotate(1deg);
     cursor: pointer;  
+}
+/* Footer section*/
+footer {
+    background-color: var(--footer-bg-crl);
+    padding: var(--space-small);
+}
+footer .footer-con {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: var(--space-smallest);
+    margin: auto;
+    padding: var(--space-smallest);
+    text-align: center;
+    
+}
+.footer-con h2 {
+    color: hsl(49, 100%, 50%);
+    font-size: var(--font-size-xh);
+    font-family: var(--body-font-family);
+    margin-bottom: 5px;
+}
+.footer-con p {
+    color: var(--grl-txt-crl);
+    font-size: var(--base-font-size);
+    font-family: var(--body-font-family);
+}
+.footer-con .footer-sec-contact p > strong {
+    color: hsl(0, 100%, 50%);
+    font-weight: 400;
+}
+.footer-con .footer-sec-about,
+.footer-con .footer-sec-contact,
+.footer-con .footer-sec-socials {
+    padding: var(--space-smallest);
+}
+.footer-con .footer-sec-socials a > img {
+    width: 35px;
+    height: auto;
+}
+footer .footer-sec-bottom {
+    text-align: center;
+    font-size: var(--base-font-size);
+    font-family: var(--logo-font-family);
+    color: var(--grl-txt-crl);
+}
+/* Responsive Design for Smaller Screens */
+@media (max-width: 768px) {
+    footer .footer-con {
+        grid-template-columns: 1fr; 
+        text-align: left; 
+        gap: var(--space-small); 
+    }
+    .footer-con h2 {
+        font-size: 1rem;
+    }
+    footer .footer-sec-bottom {
+        font-size: var(--base-font-size); 
+        margin-top: var(--space-small);
+    }
+    .footer-con .footer-sec-socials a > img {
+        width: 25px;
+    }
 }
