--- a/src/menu.css
+++ b/src/menu.css
@@ -114,7 +114,7 @@ main > .btn-con {
     align-items: center;
 }
 
-.btn-con > button {
+.btn-con a > button {
     padding: var(--menu-space-small);
     margin-bottom: var(--menu-space-smallest);
     background-color: hsl(0, 1%, 16%);  
@@ -128,14 +128,14 @@ main > .btn-con {
     box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.1); 
 }
 
-.btn-con > button:hover {
+.btn-con a > button:hover {
     background-color: hsl(51, 100%, 50%);
     color: hsl(0, 0%, 0%); 
     transform: translateY(-3px);  
     box-shadow: 0 8px 12px hsla(0, 0%, 100%, 0.2); 
 }
 
-.btn-con > button:active {
+.btn-con a > button:active {
     background-color: hsl(51, 100%, 45%);  
     transform: translateY(1px);  
     box-shadow: 0 2px 4px hsla(0, 1%, 77%, 0.1);  
